; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_outsregister.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/uIP/extr_bba.c_bba_outsregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXI_CHANNEL_0 = common dso_local global i32 0, align 4
@EXI_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @bba_outsregister to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bba_outsregister(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = shl i32 %4, 8
  %6 = or i32 %5, -1073741824
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @EXI_CHANNEL_0, align 4
  %8 = load i32, i32* @EXI_WRITE, align 4
  %9 = call i32 @EXI_Imm(i32 %7, i32* %3, i32 4, i32 %8, i32* null)
  %10 = load i32, i32* @EXI_CHANNEL_0, align 4
  %11 = call i32 @EXI_Sync(i32 %10)
  ret void
}

declare dso_local i32 @EXI_Imm(i32, i32*, i32, i32, i32*) #1

declare dso_local i32 @EXI_Sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
